2013-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-function-warn): New function,
	extracted from byte-compile-callargs-warn and byte-compile-normal-call.
	(byte-compile-callargs-warn, byte-compile-function-form): Use it.
	(byte-compile-normal-call): Remove obsolescence check.

2013-08-08  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset-restore): Doc fix.

	* register.el (frameset-frame-id, frameset-frame-with-id)
	(frameset-p, frameset-restore, frameset-save): Declare.
	(register-alist): Document framesets.
	(frameset-session-filter-alist): Declare.
	(frameset-to-register): New function.
	(jump-to-register): Implement jumping to framesets.  Doc fix.
	(describe-register-1): Describe framesets.

	* bindings.el (ctl-x-r-map): Bind ?f to frameset-to-register.

2013-08-07  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-save-frameset): Use new frameset-save args.
	Use lexical-binding.

	* frameset.el (frameset): Use type vector, not list (incompatible
	change).  Do not declare a new constructor, use the default one.
	Upgrade suggested properties `app', `name' and `desc' to slots `app',
	`name' and `description', respectively, and add read-only slot
	`timestamp'.  Doc fixes.
	(frameset-copy, frameset-persistent-filter-alist)
	(frameset-filter-alist, frameset-switch-to-gui-p)
	(frameset-switch-to-tty-p, frameset-filter-tty-to-GUI)
	(frameset-filter-sanitize-color, frameset-filter-minibuffer)
	(frameset-filter-iconified, frameset-keep-original-display-p):
	Doc fixes.
	(frameset-filter-shelve-param, frameset-filter-unshelve-param):
	Rename from frameset-filter-(save|restore)-param.  All callers changed.
	Doc fix.
	(frameset-p): Adapt to change to vector and be more thorough.
	Change arg name to OBJECT.  Doc fix.
	(frameset-prop): Rename arg PROP to PROPERTY.  Doc fix.
	(frameset-session-filter-alist): Rename from frameset-live-filter-alist.
	All callers changed.