@@ -1,3 +1,7 @@
+2013-08-08  Juanma Barranquero  <lekktu@gmail.com>
+
+	* frameset.el (frameset-p, frameset-prop): Doc fixes.
+
 2013-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/bytecomp.el (byte-compile-function-warn): New function,
